# enough

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  RECONCILIATION.md  TRADEOFFS.md  ZERO-DEP.md  deny.toml  justfile
.github/workflows/: ci.yml
apidoc/: Cargo.toml
apidoc/tests/: public_api_doc.rs
crates/almost-enough/: Cargo.toml  README.md
crates/almost-enough/benches/: debounced_timeout.rs  stop_check.rs  stop_check_zen.rs
crates/almost-enough/src/: boxed.rs  dyn_stop.rs  func.rs  guard.rs  lib.rs  or.rs  source.rs  stop_token.rs  stopper.rs  sync_stopper.rs  tree.rs
crates/almost-enough/src/time/: debounced.rs  mod.rs
crates/enough/: Cargo.toml  README.md
crates/enough-ffi/: Cargo.toml  README.md
crates/enough-ffi/src/: lib.rs
crates/enough-std/: Cargo.toml
crates/enough-std/src/: callback.rs  child.rs  lib.rs  source.rs  token.rs
crates/enough-tokio/: Cargo.toml  README.md
crates/enough-tokio/src/: lib.rs
crates/enough/src/: arc.rs  atomic.rs  boxed.rs  callback.rs  child.rs  func.rs  lib.rs  or.rs  reason.rs  source.rs  stopper.rs  sync.rs  sync_stopper.rs  tree.rs
crates/enough/src/children/: mod.rs
crates/enough/src/time/: mod.rs
crates/enough/tests/: public_api_doc.rs
docs/public-api/: ABLATION-almost-enough.md  ABLATION-enough-ffi.md  ABLATION-enough-tokio.md  ABLATION-enough.md  almost-enough.features.txt  almost-enough.internal.txt  almost-enough.txt  enough-ffi.features.txt  enough-ffi.internal.txt  enough-ffi.txt  enough-tokio.features.txt  enough-tokio.internal.txt  enough-tokio.txt  enough.features.txt  enough.internal.txt  enough.txt
examples/: architecture.md
examples/csharp/: EnoughCancellation.cs  EnoughDemo.csproj  Program.cs  README.md
examples/node/: README.md  demo.js  enough.js  package.json
tests/test-atomic/: Cargo.toml
tests/test-atomic/src/: lib.rs
tests/test-basic/: Cargo.toml
tests/test-basic/src/: lib.rs
tests/test-child/: Cargo.toml
tests/test-child/src/: lib.rs
tests/test-codec-mock/: Cargo.toml
tests/test-codec-mock/src/: lib.rs
tests/test-ergonomics/: Cargo.toml
tests/test-ergonomics/src/: lib.rs
tests/test-ffi/: Cargo.toml
tests/test-ffi/src/: lib.rs
tests/test-or-do-this/: Cargo.toml
tests/test-or-do-this/src/: lib.rs  zerodep.rs
tests/test-rayon/: Cargo.toml
tests/test-rayon/src/: lib.rs
tests/test-timeout/: Cargo.toml
tests/test-timeout/src/: lib.rs
tests/test-tokio/: Cargo.toml
tests/test-tokio/src/: lib.rs
