[package]
name = "almost-enough"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["cancellation", "cooperative", "async", "ffi", "no_std"]
categories = ["concurrency", "no-std", "rust-patterns"]
description = "Batteries-included ergonomic extensions for the `enough` cooperative cancellation crate"

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dependencies]
enough = { path = "../enough", default-features = false }
