[package]
name = "enough-ffi"
version = "0.3.0"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/enough"
keywords = ["cancellation", "ffi", "c", "interop", "no_std"]
categories = ["concurrency", "external-ffi-bindings", "api-bindings"]
description = "C FFI helpers for the enough cooperative cancellation trait"
readme = "README.md"

[features]
default = []

[dependencies]
enough = { version = "0.3", path = "../enough", default-features = false, features = ["std"] }

[dev-dependencies]
