[package]
name = "enough-std"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standard library implementations for the enough cancellation trait"
readme = "README.md"

[features]
default = []
parking_lot = ["dep:parking_lot"]

[dependencies]
enough = { workspace = true }
smallvec = { version = "1.13", default-features = false }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
