[package]
name = "enough-tokio"
version = "0.2.2"
edition = "2021"
rust-version = "1.63"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/enough"
keywords = ["cancellation", "tokio", "async", "cooperative"]
categories = ["concurrency", "asynchronous"]
description = "Tokio integration for the enough cooperative cancellation trait"
readme = "README.md"

[features]
default = []

[dependencies]
enough = { version = "0.2", default-features = false }
tokio-util = { version = "0.7", default-features = false }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt", "time", "macros", "rt-multi-thread", "sync"] }
