[package]
name = "enough"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Minimal cooperative cancellation trait for long-running operations"
readme = "README.md"

[features]
default = []
std = ["alloc"]  # std implies alloc
alloc = []

[dependencies]

[dev-dependencies]
