[package]
name = "enough"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Minimal cooperative cancellation trait for long-running operations"
readme = "../../README.md"
# The public-API snapshot test is repo tooling, not package content.
exclude = ["tests/public_api_doc.rs"]

[features]
default = []
alloc = []
std = ["alloc"]

[dependencies]

[dev-dependencies]
serde_json = "1.0.150"
