[package]
name = "test-tokio"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
enough = { path = "../../crates/enough" }
enough-std = { path = "../../crates/enough-std" }
enough-tokio = { path = "../../crates/enough-tokio" }
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tokio-util = { version = "0.7" }
